# quancoms

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: release.yml  rust.yml
benches/: gate_benchmarks.rs
crates/quancoms-core/: Cargo.toml
crates/quancoms-core/benches/: gate_benchmarks.rs
crates/quancoms-core/examples/: Deutsch_Jozsa.rs  bell_state.rs  test _limit.rs  test_limit.rs
crates/quancoms-core/src/: main.rs
crates/quancoms-core/src/complex/: mod.rs
crates/quancoms-core/src/qubit/: mod.rs
crates/quancoms-core/tests/: integration_test.rs
crates/quancoms-python/: Cargo.toml
crates/quancoms-python/src/: lib.rs
examples/: Deutsch_Jozsa.rs  bell_state.rs
src/: main.rs
src/complex/: mod.rs
src/qubit/: mod.rs
tests/: integration_test.rs
