[package]
name = "quancoms-core"
version = "0.1.2"
edition = "2024"
description = "The high-performance core engine for Quancoms quantum simulator."
license = "MIT"
repository = "https://github.com/Low-Zi-Hong/quancoms"
homepage = "https://github.com/Low-Zi-Hong/quancoms"
readme = "../../README.md"
keywords = ["quantum", "simulator", "physics"]
categories = ["science", "emulators"]

[dependencies]
rand = "0.10.0"
rayon = "1.11.0"
sysinfo = "0.38.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gate_benchmarks"
harness = false
